--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -26,7 +26,7 @@ jobs:
     # Шаг 3: Установка зависимостей
     # Скачиваем pytest (библиотеку для тестов)
     - name: Install dependencies
-      run: pip install pytest
+      run: pip install -r requirements.txt
 
     # Шаг 4: ЗАПУСК ТЕСТОВ
     # python -m pytest: запускаем pytest как модуль.
